css/style.css
/* Basic styling is in the head tag in default.html */

/** Specific elements **/
img {
  border: 0;
  max-width: 100%;
  max-height: 100%;
}

a:not(.post-title > a):not(nav > a) {
  color: #f474ff;
  text-decoration: none;
}

code {
  background: #0d1117;
  padding: 0.1% 0.2%;
}

.highlight > code {
  background: unset;
  padding: unset;
}

.highlight {
  background-color: #392353;
  padding: 0.25%;
}

.highlight .ow, .highlight .o {
  color: #f00;
  font-weight: bold;
}

.highlight .k, .highlight .kv {
  color: #0800ff;
  font-weight: bold;
}

.highlight .kn {
  color: #ac8a8a;
  font-weight: bold;
}

/** Nav bar and footer **/
nav, footer {
  background: #0d1117;
  padding-top: 1%;
  padding-bottom: 1%;
}

nav > a {
  background: #1c6373;
  color: white;
  padding: 1%;
}

footer {
  margin-top: auto;
  color: white;
}

